--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             <i class="fa-solid fa-bell" style="color: #000000;"></i>
             <i class="fa-solid fa-user" style="color: #000000;"></i>
         </div>
+        <div class="navbar__s4">
+            <i class="fa-solid fa-bars"></i>
+        </div>
 
     </div>
     <div class="categories">
@@ -130,7 +133,7 @@
 
     <div class="popular">
         <div class="popular__container">
-            <div class="course-cards__2">
+            <div class="course-cards">
                 <img src="images/1.jpeg">
                 <h3>2024 PYTHON Visualisazion</h3>
                 <p> van Rossum</p>
